# colorscopes

./: CMakeLists.txt  README.md  about.ui  coloranalyzer.cpp  coloranalyzer.h  coloranalyzer.ui  imagewidget.cpp  imagewidget.h  main.cpp  vectorscopewidget.cpp  vectorscopewidget.h
